// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h6
  className="Typography__TypographyWrapper-sc-12agh80-0 djOmfc sinoui-typography sinoui-typography--subtitle2"
  color="textPrimary"
  type="subtitle2"
>
  Subtitle2
</h6>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 djOmfc sinoui-typography sinoui-typography--subtitle2"
    color="textPrimary"
    type="subtitle2"
  >
    Subtitle2
  </h2>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 iLsfTO sinoui-typography sinoui-typography--subtitle2"
    color="textPrimary"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 ihxLxe sinoui-typography sinoui-typography--subtitle2"
    color="textPrimary"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 czjSFo sinoui-typography sinoui-typography--subtitle2"
    color="success"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 ffEAgA sinoui-typography sinoui-typography--subtitle2 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 djOmfc sinoui-typography sinoui-typography--subtitle2"
    color="textPrimary"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 eiTKVl sinoui-typography sinoui-typography--subtitle2"
    color="primary"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 kiRLLC sinoui-typography sinoui-typography--subtitle2"
    color="secondary"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 djOmfc sinoui-typography sinoui-typography--subtitle2"
    color="textPrimary"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 hOmkZf sinoui-typography sinoui-typography--subtitle2"
    color="textSecondary"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 cygkHe sinoui-typography sinoui-typography--subtitle2"
    color="error"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 gTIJXo sinoui-typography sinoui-typography--subtitle2"
    color="warning"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 czjSFo sinoui-typography sinoui-typography--subtitle2"
    color="success"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 jJWHLx sinoui-typography sinoui-typography--subtitle2"
    color="info"
    type="subtitle2"
  >
    Subtitle2
  </h6>,
]
`;
